Adding a view more changes and a changelog

--- a/games.htm
+++ b/games.htm
@@ -42,9 +42,9 @@ window.onload = function(){
 }
 
 function keyDown(evt){
-	document.eventViewer("keyDown", keyDown);
-	console.log("The value is ", evt.keyCode);
-
+	document.eventViewer("keyDown", keyDown){
+		console.log("The value is ", evt.keyCode);
+	}
 	
 
 }
