--- a/games.htm
+++ b/games.htm
@@ -5,17 +5,18 @@ var set = canvas.getContext('2d');
 
 //Player Objects
 var plPos = (100, 100)
-var plHealth = 100;
-var plHeight = 50;
-var plWidth = 50;
+var plHealth = 75;
+var plHeight = 75;
+var plWidth = 75;
 
 //movement stuff
 //movement stuff
 var x = 100;
 var y = 100;
 
-var pMoveVert = 0;
-var jumpAllowed = true;
+var pJump = 0;
+var jumpAllowed = false;
+var pVertDown = 0;
 
 //Keybinding
 var left = false;
@@ -27,9 +28,9 @@ var jump = false;
 
 //Walls in arrays.
 var safeWall = [
-	[300, 300, 200, 200],
-	[350, 350, 200, 200],
-	[400, 400, 200, 200]
+	[300, 200, 100, 100],
+	[400, 650, 100, 100],
+	[200, 400, 100, 100]
 	];
 var badWall= [
 	[500, 500, 200, 200],
@@ -59,6 +60,7 @@ function keydown(evt){
 	case 38: up = true; break;
 	case 39: right = true; break;
 	case 40: down = true; break;
+	case 32: jump = true; break;
 	}
 	
 
@@ -71,42 +73,50 @@ function keyup(evt){
 	case 38: up = false; break;
 	case 39: right = false; break;
 	case 40: down = false; break;
+	case 32: jump = false; break;
 	}
 }
 
 function gameSettingLogic(){
 	paintBackground();
 	playerObject();
-	gravity();
 	collisionObjects();
+	gravity();
 	movement();
 }
 
 function collisionObjects(){
     normalWall();
     deathWall();
+
 }
 
 function movement(){
+	
+	var pSpeed = 2
 
-	if (left){ 
-		x--;	
+	if (left && !checkCollision(x - pSpeed, y))
+		x -= pSpeed;
+	if (right && !checkCollision(x + pSpeed, y))
+		x += pSpeed;
+	
+	if (jump && jumpAllowed){
+		pVertDown = -4;
+		jumpAllowed = false;
 	}
-	else if (right){
-		x++;
+	
+	if (!jump && pVertDown < -2){
+		pVertDown += 2;
 	}
-	if (down){ 
-		y++;	
-	}
-	else if (up){
-		y--;
-	}
+	/*if(!jump && jumpAllowed)
+		y -= 1;*/
+	
+	/*if (up && !checkCollision(x, y - pSpeed))
+		y -= pSpeed;
+	if (down && !checkCollision(x, y + pSpeed))
+		y += pSpeed;*/
 }
 
-function gravity(){
-	y += pMoveVert;
-	pMoveVert += 0.001; 
-}
 
 
 
@@ -114,6 +124,52 @@ function checkIntersectRect(r11, r1u, r1r, r1d, r21, r2u, r2r, r2d){
 	return !(r21 > r1r || r2r < r11 ||r2u > r1d || r2d < r1u );
 		
 }
+
+function checkCollision(potentX, potentY){
+	var returnVal = false;
+	for (var i = 0; i < safeWall.length; i++){
+		if (checkIntersectRect(potentX, potentY, potentX + plWidth, potentY + plHeight, 
+		safeWall[i][0], safeWall[i][1], safeWall[i][0] + safeWall[i][2], safeWall[i][1] + safeWall[i][3]))
+		{
+			returnVal = true; break;			
+		}
+	}
+	
+	for (var i = 0; i < safeWall.length; i++){
+		if (checkIntersectRect(potentX, potentY, potentX + plWidth, potentY + plHeight, 
+		badWall[i][0], badWall[i][1], badWall[i][0] + badWall[i][2], badWall[i][1] + badWall[i][3]))
+		{
+			returnVal = true; break;			
+		}
+	}
+	return returnVal;
+}
+
+function gravity(){
+	if (!checkCollision (x, y + pVertDown)){
+		
+		y += pVertDown;
+		pVertDown += .01;
+	}
+	
+	else{
+		for (var i = pVertDown; i > 0; i--){
+			if(!checkCollision (x, y + i)){
+				y += i;
+				break;
+			}
+		}
+		
+		if (checkCollision (x, y + 1)){
+			jumpAllowed = true;
+			
+		}
+		
+		pVertDown = 0;
+	}
+	
+}
+
 
 function normalWall(){
 	set.fillStyle = '#000000';
@@ -139,12 +195,13 @@ function playerObject(){
 
 function paintBackground(){
 
-	
-	
+
 	set.fillStyle = '#ffb3ff';
 	set.fillRect(0, 0, canvas.width, canvas.height);
 	
-
+	/*set.fillStyle = '#DEB887'
+	set.fillRect(x, y, plWidth, plHeight)*/
+	
 	/*set.fillStyle = 'red';
 	set.fillRect(x, 0, 50, 50);
 	x++;*/
