--- a/games.htm
+++ b/games.htm
@@ -28,14 +28,16 @@ var jump = false;
 
 //Walls in arrays.
 var safeWall = [
-	[300, 200, 100, 100],
-	[400, 650, 100, 100],
-	[200, 400, 100, 100]
+	[300, 200, 200, 100],
+	[200, 850, 500, 50],
+	[200, 400, 100, 200],
+	[300, 400, 400, 300]
 	];
 var badWall= [
 	[500, 500, 200, 200],
 	[550, 550, 200, 200],
-	[600, 600, 200, 200]
+	[600, 600, 200, 200],
+	/*[700, 400, 100, 100]*/
 	];
 
 
@@ -135,7 +137,7 @@ function checkCollision(potentX, potentY){
 		}
 	}
 	
-	for (var i = 0; i < safeWall.length; i++){
+	for (var i = 0; i < badWall.length; i++){
 		if (checkIntersectRect(potentX, potentY, potentX + plWidth, potentY + plHeight, 
 		badWall[i][0], badWall[i][1], badWall[i][0] + badWall[i][2], badWall[i][1] + badWall[i][3]))
 		{
