--- a/games.htm
+++ b/games.htm
@@ -232,7 +232,12 @@ function paintBackground(){
 }
 
 
-
+function textBackground(){
+	text.font = '30px Georgia';
+	text.fillStyle = '#000000';
+	text.fillText("", 860, 50);
+	
+}
 
 </script>
 </body>
